# blueprint-auto-layout-zadanie2

./: CMakeLists.txt  README.md  graph.json  main.cpp  mainwindow.cpp  mainwindow.h
src/: graphlayout.cpp  graphlayout.h
